#
# Copyright 2016-2023 the Pacemaker project contributors
#
# The version control history for this file may have further details.
#
# This source code is licensed under the GNU General Public License version 2
# or later (GPLv2+) WITHOUT ANY WARRANTY.
#

include $(top_srcdir)/mk/common.mk

samplesdir		= $(datadir)/$(PACKAGE)/alerts/
dist_samples_DATA	= alert_file.sh.sample	\
			  alert_smtp.sh.sample	\
			  alert_snmp.sh.sample
